<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>artwa_slam</name>
  <version>0.0.1</version>
  <description>SLAM packages for ARTWA robot</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>artwa_description</build_depend>
  <build_depend>cartographer</build_depend>
  <build_depend>cartographer_ros</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>cartographer</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>artwa_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
